--- a/DidWeFeedTheCatToday.Client/DidWeFeedTheCatToday.Client.csproj
+++ b/DidWeFeedTheCatToday.Client/DidWeFeedTheCatToday.Client.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.13" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.13" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.13" />
   </ItemGroup>
 
